# xian-contracts

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: validate.yml
contracts/: README.md
contracts/dex/: README.md
contracts/dex/src/: con_dex.py  con_dex_helper.py  con_lp_token.py  con_pairs.py
contracts/dex/tests/: README.md  test_dex.py  test_dex_helper.py
contracts/dex/web/: README.md  (+3 more)
contracts/lottery/: README.md  contract-bundle.json
contracts/nameservice/: README.md  contract-bundle.json
contracts/privacy-token/: README.md
contracts/profile-registry/: README.md  contract-bundle.json
contracts/reflection-token/: README.md  contract-bundle.json
contracts/scheduled-actions/: README.md  contract-bundle.json
contracts/shielded-commands/: README.md  contract-bundle.json
contracts/shielded-dex-adapter/: README.md  contract-bundle.json
contracts/shielded-note-token/: README.md  contract-bundle.json
contracts/shielded-scheduler-adapter/: README.md  contract-bundle.json
contracts/staking/: README.md  contract-bundle.json
contracts/stream-payments/: README.md  contract-bundle.json
contracts/turn-based-games/: README.md  contract-bundle.json
contracts/weighted-lottery/: README.md  contract-bundle.json
contracts/xsc001/: README.md  contract-bundle.json
contracts/xsc004/: README.md
contracts/xsc005/: README.md  contract-bundle.json
docs/: ARCHITECTURE.md  BACKLOG.md  MANIFESTS.md  README.md  SHIELDED_STACK.md
privacy_token/: con_privacy_token.py
scripts/: README.md  validate_contracts.py
(+65 files in other folders)
